third_party/move/move-compiler-v2/tests/checking/typing/assign_unpack_references_invalid.exp

Diagnostics:
error: expected `&u64` but found `integer` in lvalue
  ┌─ tests/checking/typing/assign_unpack_references_invalid.move:9:9
  │
9 │         f = 0;
  │         ^

error: expected `M::S` but found `&M::S` in lvalue
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:10:9
   │
10 │         s2 = S { f: 0 }
   │         ^^

error: expected `&mut u64` but found `integer` in lvalue
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:17:9
   │
17 │         f = 0;
   │         ^

error: expected `M::S` but found `&mut M::S` in lvalue
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:18:9
   │
18 │         s2 = S { f: 0 }
   │         ^^

error: mutability mismatch (&mut != &) in lvalue
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:26:9
   │
26 │         f = &0;
   │         ^

error: mutability mismatch (&mut != &) in lvalue
   ┌─ tests/checking/typing/assign_unpack_references_invalid.move:27:9
   │
27 │         s2 = &S { f: 0 }
   │         ^^
